# limx_ws

./: README.md
src/inspection_pkg/: CMakeLists.txt  package.xml
src/inspection_pkg/motion_library/: __init__.py  motion_controller.py
src/inspection_pkg/scripts/: black_line_detection.py  color_detection.py  deepseek_agent.py  deepseek_prompt.py  main_inspection.py  main_node.py  obstacle_avoidance.py
tron_up_con/: README.md  TRON上层应用开发接口.txt  main.py  main_nlp.py  requirements.txt  robot_config.ini  robot_config.py  robot_controller.py  robot_data_logger.py  robot_gui.py  robot_monitor.py  test_baidu_api.py  场景.txt
